<resources>
    <string name="app_name">TradingGML</string>

    <string name="shortcut_rule_short_label">🍥 基本法</string>
    <string name="shortcut_rule_long_label">🍥 基本法</string>
    <string name="shortcut_rule_disabled_message">🍥 程序出Bug了</string>

    <string name="shortcut_bird_short_label">🍉 飞行小鸟</string>
    <string name="shortcut_bird_long_label">🍉 飞行小鸟</string>
    <string name="shortcut_bird_disabled_message">🍉 飞行小鸟游戏不可用</string>

    <string name="shortcut_note_short_label">🍟 临时笔记本</string>
    <string name="shortcut_note_long_label">🍟 临时笔记本</string>
    <string name="shortcut_note_disabled_message">🍟 临时笔记本不可用</string>

    <string name="shortcut_passwd_short_label">✨ 密码记录器</string>
    <string name="shortcut_passwd_long_label">✨ 密码记录器</string>
    <string name="shortcut_passwd_disabled_message">✨ 密码记录器不可用</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>